<?php

declare(strict_types=1);

namespace IfCastle\AQL\Storage\Exceptions;

class ConnectFailed extends StorageException {}
