<?php

declare(strict_types=1);

namespace IfCastle\AQL\Storage\Exceptions;

use IfCastle\Exceptions\RuntimeException;

class TransactionResumeException extends RuntimeException {}
